--- a/style.css
+++ b/style.css
@@ -57,6 +57,58 @@ h1 {
     cursor: pointer;
 }
 
+/* ================= STAR BACKGROUND ================= */
+
+.stars {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999999;
+    pointer-events: none;
+}
+
+
+/* ================= LOADER ================= */
+
+#pageLoader {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(135deg, #031f1a, #052e26);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    transition: opacity 0.8s ease;
+}
+
+.loader-content {
+    text-align: center;
+    color: white;
+}
+
+.spinner {
+    width: 60px;
+    height: 60px;
+    border: 5px solid rgba(255, 255, 255, 0.2);
+    border-top: 5px solid #f5d76e;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+    margin: 0 auto 15px;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 /* ===== CALCULATOR ===== */
 
 .calculator-page {
@@ -151,7 +203,7 @@ small {
 
 input:focus {
     outline: none;
-    box-shadow: 0 0 10px rgba(245, 215, 110, 0.6);
+    box-shadow: 0 0 10px rgb(255, 210, 47);
 }
 
 
@@ -183,6 +235,17 @@ input:focus {
 }
 
 
+/* Chrome, Edge, Safari */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+    -moz-appearance: textfield;
+}
 
 
 /* ===== MODAL ===== */
